2019-02-22  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dviconcat.c: Set DVI ID to 3 if at least one input DVI file
	contains opcode 255.

2017-06-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvibook.c, dviconcat.c, dviselect.c, dvitodvi.c, error.h:
	Allow Unicode file names. (Windows only)

2017-06-18  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvibook.c, dviclass.[ch], dvicodes.h, dviconcat.c,
	dviselect.c, dvitodvi.c: Add support for pTeX tate-kumi
	DVI. The patch is based on the work by H. Kagotani in 1992.
	* dvibook.c: Add -r option to generate right-hand side binding
	books. It would be useful for Japanese tate-kumi documents.
	* dvibook.man: Add -r option.
	* seetexk.test: Add tests for pTeX support.
	* playbook.3, playbook.4, playconc.3, playdvi.3, playsel.3,
	playtate.dvi: Added.
	* Makefile.am: Adjusted for pTeX support.

2017-06-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvibook.c, dviconcat.c, dviselect.c, dvitodvi.c:
	Show usage and exit if stdin is set to a keyboard.

2015-10-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvitodvi.c (ParseSpecs): Avoid to return the address of a
	local variable, even when the result is discarded.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-02-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop tests for strerror(), vprintf(), and
	sizeof(int); add AC_TYPE_INT16_T etc.
	* types.h: Drop unused HAVE_VPRINTF; use int16_t etc.

2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvitodvi.c: Avboid undefined behaviour when char is signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dviselect.c: Delay opening output until a page is selected.
	* seetexk.test: More tests with stdin and stdout.

	* dviconcat.c: Drop '#include <kpathsea/c-auto.h>'.
